# module1-clean-code-principles

./: .gitignore  Dockerfile  README.md  churn_library.py  churn_notebook.ipynb  configuration.py  pyproject.toml  test_churn_library.py
