[tool.poetry]
name = "module1-clean-code-principles"
version = "0.1.0"
description = ""
authors = ["giuliovn <giuliovnturi@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "0.24.1"
shap = "0.40.0"
joblib = "1.0.1"
pandas = "1.2.4"
numpy = "1.20.1"
matplotlib = "3.3.4"
seaborn = "0.11.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pylint = "^2.16.2"
autopep8 = "^2.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
